Fix demo login cutoff bug

--- a/app/assets/stylesheets/art.scss
+++ b/app/assets/stylesheets/art.scss
@@ -1,7 +1,7 @@
 .art-box {
   position: relative;
   height: 520px;
-  bottom: 130px;
+  bottom: 120px;
   margin-top: 395px;
   margin-bottom: 15px;
 }
